objects/tffa__DecisionStrategy__c.object
<CustomObject>
    <description>Represents a strategy in Champion/Challenger testing for a use case (purpose). e.g. rules for resolving Questionnaires for Financial needs. This can be of type Champion or Challenger. A Champion strategy is the one which is currently in use (in production). A Challenger strategy is a new strategy (usually current  strategy with some tweaking) that a business user would like to test alongside the Champion. At runtime depending on the weights of the strategies a suitable one is chosen. For tracking, the chosen strategy is also stamped on the (decision) consuming objects. e.g. Financial Need object for Financial Need Questionnaires, Application for KYC or Credit decisions, etc. This is later used for analysing the efficacy of the Challenger strategy w.r.t a business outcome. e.g. conversion across different Financial need Questionnaires. If it is found to be better, its weight may be further increased for further testing.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the strategy is active for consumption. Derived from disabled and configuration active.</description>
        <formula>tffa__Configuration__r.tffa__Active__c = True &amp;&amp;  tffa__Disabled__c = False</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Configuration__c</fullName>
        <description>Parent configuration</description>
        <label>Configuration</label>
        <referenceTo>tffa__DecisionStrategyConfiguration__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of strategy.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EntityKey__c</fullName>
        <description>Combination of entityType and entityPurpose. e.g. QuestionnaireMatrix_FINANCIAL_NEED, ApplicationDecisionMatrix_KYC</description>
        <formula>tffa__Configuration__r.tffa__EntityKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Specifies the relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of strategy.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DecisionStrategyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__WeightFrom__c</fullName>
        <description>The weight of this strategy in distribution. Sets the lower bound.</description>
        <label>Weight (from)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__WeightTo__c</fullName>
        <description>The weight of this strategy in distribution. Sets the upper bound.</description>
        <label>Weight (to)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Weight__c</fullName>
        <description>The weight of this strategy in distribution. Influences the likelihood of the strategy getting chosen at runtime. The more the weight, the higher the likelihood.</description>
        <label>Weight</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Decision Strategy</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Configuration__c</columns>
        <columns>tffa__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>